[package]
name = "airdrop-merkle-tree-near-rs"
version = "0.1.0"
edition = "2021"
authors = ["sodamnfoolish <sodamnfoolish@outlook.com>"]
description = "merkle tree for airdrop contract on NEAR"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.1.1"
